src/objects/CD_GMT_Header_Level_Details__c.object
<CustomObject>
    <fields>
        <fullName>Demand_qty_User__c</fullName>
        <label>Demand qty from User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_qty_from_Demantra__c</fullName>
        <label>Demand qty from Demantra</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Plan_MCPU__c</fullName>
        <label>LE-Financial Plan MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_PROD_HDR_DTL__c</fullName>
        <externalId>true</externalId>
        <label>GMT_PROD_HDR_DTL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_Launch_GM__c</fullName>
        <label>LE- Launch GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_Launch_MCPU__c</fullName>
        <label>LE - Launch MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_ASP__c</fullName>
        <label>LE-Launch ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Gm_formula__c</fullName>
        <formula>IF( ISPICKVAL(Product_Name__r.MCPU_Calulation_Based_on__c , &quot;BOM Value&quot;) , (  (  Launch_ASP__c  )  -  (  LE_Launch_MCPU__c  )  )  /  (  Launch_ASP__c  ), (  (  Launch_ASP__c  )  -  (  LE_Launch_MCPU__c  )  )  /  (  Launch_ASP__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Launch Gm formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_IOD_OUT__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>CD_GMT_ProductDetails__c</referenceTo>
        <relationshipLabel>CD GMT Header Level Details</relationshipLabel>
        <relationshipName>CD_GMT_Header_Level_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>Launch Quarter and next 5 quarters</description>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Financial_Plan_MCPU__c</fullName>
        <formula>Financial_Plan_MCPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO-Financial Plan MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Launch_ASP__c</fullName>
        <formula>Launch_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO-Launch ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Launch_GM__c</fullName>
        <label>RO- Launch GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Launch_MCPU__c</fullName>
        <label>RO - Launch MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Target_GM__c</fullName>
        <formula>Target_GM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO-Target GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RO_Target_MCPU__c</fullName>
        <formula>Target_MCPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RO-Target MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBE_Financial_Plan_MCPU__c</fullName>
        <formula>Financial_Plan_MCPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBE-Financial Plan MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Launch_ASP__c</fullName>
        <formula>Launch_ASP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBE-Launch ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Launch_GM__c</fullName>
        <label>SBE- Launch GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Launch_MCPU__c</fullName>
        <label>SBE - Launch MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Target_GM__c</fullName>
        <formula>Target_GM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBE-Target GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBE_Target_MCPU__c</fullName>
        <formula>Target_MCPU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBE-Target MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_GM__c</fullName>
        <label>LE-Target GM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_MCPU__c</fullName>
        <label>LE-Target MCPU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Launch year and year belongs to next 5 quarters</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD GMT Header Level Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD GMT Header Level Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT Header Level Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>